# pgmq

./: .gitignore  LICENSE  README.md  compose.yaml  postgres.Dockerfile  postgresql.conf
example/: README.md  clean.sh  insert.sh  pyproject.toml  worker.py
initdb.d/: 001_pg_cron.sql  003_permissions.sql
migrations/: 002_messages.sql
pgmq-py/: README.md  pyproject.toml
pgmq-py/example/: clean-message-tables.sh  publish-message.sh  worker.py
pgmq-py/pgmq/: __init__.py  pgmq.py  worker.py
pgmq-py/scripts/: clean-message-tables.sh  publish-message.sh
