[project]
name = "pgmq"
version = "0.1.0"
description = "A simple Postgres backed message queue"
authors = [
    { name = "Oliver Lambson", email = "oliverlambson@gmail.com" }
]
dependencies = [
    "asyncpg",
    "asyncpg-stubs",
    "pydantic>=2.8.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pgmq"]
